Add optional URL fields
